crates/ros-z/tests/ui/message_derive/empty_type_name.rs
use ros_z::Message;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize, Message)]
#[message(name = "")]
struct EmptyTypeName {
    value: u32,
}

fn main() {}
